package original.api.general;

public interface Food  {
    double Calories_per_100g();
}
