package original.api.general;

public interface Product  {
    double weight();

    double price();

}
