@startuml

title __GENERAL's Class Diagram__\n

  namespace original.api.general {
    class original.api.general.Burger {
        ~ items : List<Product>
        ~ name : String
        + Burger()
        + Calories()
        + Calories_per_100g()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace original.api.general {
    class original.api.general.Cheddar {
        - BASE_PRICE : double
        - cal_100 : double
        - weight : double
        + Calories()
        + Calories_per_100g()
        + Cheddar()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace original.api.general {
    class original.api.general.DeepFriedOnions {
        - BASE_PRICE : double
        - cal_100 : double
        - weight : double
        + Calories()
        + Calories_per_100g()
        + DeepFriedOnions()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Food {
        {abstract} + Calories_per_100g()
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Foodproduct {
        {abstract} + Calories()
    }
  }
  

  namespace original.api.general {
    class original.api.general.Meat {
        - weight : double
        + Calories()
        + Calories_per_100g()
        + Meat()
        + calories()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace original.api.general {
    enum MeatType {
      BEEF
      WHITEFISH
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Product {
        {abstract} + price()
        {abstract} + weight()
    }
  }
  

  namespace original.api.general {
    class original.api.general.Sauce {
        {static} - BASE_PRICE : double
        - weight : double
        + Calories()
        + Calories_per_100g()
        + Sauce()
        + calories()
        + price()
        + toString()
        + weight()
    }
  }
  

  namespace original.api.general {
    enum SauceType {
      BARBECUE
      BEARNAISE
      BURGER
    }
  }
  

  namespace original.api.general {
    class original.api.general.Tomato {
        - BASE_PRICE : double
        - cal : double
        - weight : double
        + Calories()
        + Calories_per_100g()
        + Tomato()
        + price()
        + toString()
        + weight()
    }
  }
  

  original.api.general.Burger .up.|> original.api.general.Product
  original.api.general.Cheddar .up.|> original.api.general.Product
  original.api.general.DeepFriedOnions .up.|> original.api.general.Product
  original.api.general.Meat .up.|> original.api.general.Product
  original.api.general.Meat o-- original.api.general.Meat.MeatType : type
  original.api.general.Meat +-down- original.api.general.Meat.MeatType
  original.api.general.Sauce .up.|> original.api.general.Product
  original.api.general.Sauce o-- original.api.general.Sauce.SauceType : type
  original.api.general.Sauce +-down- original.api.general.Sauce.SauceType
  original.api.general.Tomato .up.|> original.api.general.Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
